--- a/src/json/frontmost_band_summary.json.erb
+++ b/src/json/frontmost_band_summary.json.erb
@@ -1,5 +1,5 @@
 {
-    "title": "FrontmostIfBand_summary",
+    "title": "FrontmostIfBand_summary1",
     "rules": [
       {
         "description": "FrontmostIfBand_summary",
