--- a/src/json/functionkey_summary.json.erb
+++ b/src/json/functionkey_summary.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "FunctionkeySummary",
+    "title": "FunctionkeySummary1",
     "rules": [
       {
-        "description": "FunctionkeySummary",
+        "description": "FunctionkeySummary1",
         "manipulators": [
             {
                 "description": "F1_よく使う-md",
@@ -40,20 +40,20 @@
                         "name": "f3 pressed",
                         "value": 1
                     },
-                                {
-        "type": "frontmost_application_unless",
-        "bundle_identifiers": [
-                    "^com.vmware.fusion$",
-                    "^com.vmware.horizon$",
-                    "^com.vmware.view$",
-                    "^com.parallels.desktop$",
-                    "^com.parallels.vm$",
-                    "^com.parallels.desktop.console$",
-                    "^org.virtualbox.app.VirtualBoxVM$",
-                    "^com.vmware.proxyApp.",
-                    "^com.parallels.winapp."
-        ]
-        }
+                    {
+                "type": "frontmost_application_unless",
+                "bundle_identifiers": [
+                            "^com.vmware.fusion$",
+                            "^com.vmware.horizon$",
+                            "^com.vmware.view$",
+                            "^com.parallels.desktop$",
+                            "^com.parallels.vm$",
+                            "^com.parallels.desktop.console$",
+                            "^org.virtualbox.app.VirtualBoxVM$",
+                            "^com.vmware.proxyApp.",
+                            "^com.parallels.winapp."
+                    ]
+                    }
                 ]
             },
             {
@@ -79,19 +79,19 @@
                 ],
                 "conditions": [
                                 {
-        "type": "frontmost_application_unless",
-        "bundle_identifiers": [
-                    "^com.vmware.fusion$",
-                    "^com.vmware.horizon$",
-                    "^com.vmware.view$",
-                    "^com.parallels.desktop$",
-                    "^com.parallels.vm$",
-                    "^com.parallels.desktop.console$",
-                    "^org.virtualbox.app.VirtualBoxVM$",
-                    "^com.vmware.proxyApp.",
-                    "^com.parallels.winapp."
-        ]
-        }
+                    "type": "frontmost_application_unless",
+                    "bundle_identifiers": [
+                        "^com.vmware.fusion$",
+                        "^com.vmware.horizon$",
+                        "^com.vmware.view$",
+                        "^com.parallels.desktop$",
+                        "^com.parallels.vm$",
+                        "^com.parallels.desktop.console$",
+                        "^org.virtualbox.app.VirtualBoxVM$",
+                        "^com.vmware.proxyApp.",
+                        "^com.parallels.winapp."
+                    ]
+                    }
                 ],
                 "to_delayed_action": {
                     "to_if_invoked": [
