--- a/src/json/functionkey_summary.json.erb
+++ b/src/json/functionkey_summary.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "FunctionkeySummary2",
+    "title": "FunctionkeySummary3",
     "rules": [
         {
-            "description": "FunctionkeySummary2",
+            "description": "FunctionkeySummary3",
             "manipulators": [
                 {
                     "description": "F1_よく使う-md",
@@ -22,12 +22,7 @@
                     "description": "Double F3_.KeyManageListOpen",
                     "type": "basic",
                     "from": {
-                        "key_code": "f3",
-                        "modifiers": {
-                            "optional": [
-                                "any"
-                            ]
-                        }
+                        "key_code": "f3"
                     },
                     "to": [
                         {
@@ -59,12 +54,7 @@
                 {
                     "type": "basic",
                     "from": {
-                        "key_code": "f3",
-                        "modifiers": {
-                            "optional": [
-                                "any"
-                            ]
-                        }
+                        "key_code": "f3"
                     },
                     "to": [
                         {
