--- a/src/json/functionkey_summary.json.erb
+++ b/src/json/functionkey_summary.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "FunctionkeySummary2",
+    "title": "FunctionkeySummary3",
     "rules": [
         {
-            "description": "FunctionkeySummary2",
+            "description": "FunctionkeySummary3",
             "manipulators": [
                 {
                 "description": "Double F1 -> Cmd+Opt+shift+2",
@@ -308,6 +308,69 @@
                             }
                         ]
                     }
+                },
+                {
+                    "description": "Single F7 -> Cmd+Opt+Shift+8 (delayed, canceled by double-press)",
+                    "type": "basic",
+                    "from": { "key_code": "f7" },
+                    "to": [
+                    { "set_variable": { "name": "f7_pressed", "value": 1 } }
+                    ],
+                    "to_delayed_action": {
+                    "to_if_invoked": [
+                        { "key_code": "8", "modifiers": ["command", "option", "shift"] },
+                        { "set_variable": { "name": "f7_pressed", "value": 0 } }
+                    ],
+                    "to_if_canceled": [
+                        { "set_variable": { "name": "f7_pressed", "value": 0 } }
+                    ]
+                    },
+                    "parameters": {
+                    "basic.to_delayed_action_delay_milliseconds": 300
+                    },
+                    "conditions": [
+                    { "type": "variable_if", "name": "f7_pressed", "value": 0 },
+                    {
+                        "type": "frontmost_application_unless",
+                        "bundle_identifiers": [
+                        "^com.vmware.fusion$",
+                        "^com.vmware.horizon$",
+                        "^com.vmware.view$",
+                        "^com.parallels.desktop$",
+                        "^com.parallels.vm$",
+                        "^com.parallels.desktop.console$",
+                        "^org.virtualbox.app.VirtualBoxVM$",
+                        "^com.vmware.proxyApp.",
+                        "^com.parallels.winapp."
+                        ]
+                    }
+                    ]
+                },
+                {
+                    "description": "Double F7 -> Cmd+Opt+Shift+9",
+                    "type": "basic",
+                    "from": { "key_code": "f7" },
+                    "to": [
+                    { "set_variable": { "name": "f7_pressed", "value": 0 } },
+                    { "key_code": "9", "modifiers": ["command", "option", "shift"] }
+                    ],
+                    "conditions": [
+                    { "type": "variable_if", "name": "f7_pressed", "value": 1 },
+                    {
+                        "type": "frontmost_application_unless",
+                        "bundle_identifiers": [
+                        "^com.vmware.fusion$",
+                        "^com.vmware.horizon$",
+                        "^com.vmware.view$",
+                        "^com.parallels.desktop$",
+                        "^com.parallels.vm$",
+                        "^com.parallels.desktop.console$",
+                        "^org.virtualbox.app.VirtualBoxVM$",
+                        "^com.vmware.proxyApp.",
+                        "^com.parallels.winapp."
+                        ]
+                    }
+                    ]
                 },
                 {
                     "description": "Double F11_GeneralPassword_serverPassword_fileOpen",
