--- a/src/json/functionkey_summary.json.erb
+++ b/src/json/functionkey_summary.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "FunctionkeySummary6",
+    "title": "FunctionkeySummary7",
     "rules": [
         {
-            "description": "FunctionkeySummary6",
+            "description": "FunctionkeySummary7",
             "manipulators": [
                 {
                 "description": "Double F1 -> Cmd+Opt+shift+2",
@@ -68,7 +68,7 @@
                 ]
                 },
                 {
-                    "description": "Double F3 -> Cmd+Opt+shift+0",
+                    "description": "Double F3 -> 整理_Cmd+Opt+shift+0",
                     "type": "basic",
                     "from": { "key_code": "f3" },
                     "to": [
@@ -94,7 +94,7 @@
                     ]
                 },
                 {
-                    "description": "Single F3 -> Open Excel (delayed, canceled by double-press)",
+                    "description": "Single F3 -> 整理_Open Excel (delayed, canceled by double-press)",
                     "type": "basic",
                     "from": { "key_code": "f3" },
                     "to": [
@@ -131,89 +131,67 @@
                     ]
                 },
                 {
-                    "description": "Double F4_1度押し:Category内ファイル選択,2度押し:RulesSummary",
+                    "description": "Double F4 -> Cmd+Opt+shift+0",
                     "type": "basic",
-                    "from": {"key_code": "f4"},
+                    "from": { "key_code": "f4" },
                     "to": [
-                        {
-                            "shell_command": "open '/Users/user/Dropbox/Rule/Mac/RulesSummary.md'"
-                        }
+                        { "set_variable": { "name": "f4_pressed", "value": 0 } },
+                        { "key_code": "4", "modifiers": ["command", "option", "shift"] }
                     ],
                     "conditions": [
+                        { "type": "variable_if", "name": "f4_pressed", "value": 1 },
                         {
-                            "type": "variable_if",
-                            "name": "f4 pressed",
-                            "value": 1
-                        },
-                        {
-                            "type": "frontmost_application_unless",
-                            "bundle_identifiers": [
-                                "^com.vmware.fusion$",
-                                "^com.vmware.horizon$",
-                                "^com.vmware.view$",
-                                "^com.parallels.desktop$",
-                                "^com.parallels.vm$",
-                                "^com.parallels.desktop.console$",
-                                "^org.virtualbox.app.VirtualBoxVM$",
-                                "^com.vmware.proxyApp.",
-                                "^com.parallels.winapp."
-                            ]
+                        "type": "frontmost_application_unless",
+                        "bundle_identifiers": [
+                            "^com.vmware.fusion$",
+                            "^com.vmware.horizon$",
+                            "^com.vmware.view$",
+                            "^com.parallels.desktop$",
+                            "^com.parallels.vm$",
+                            "^com.parallels.desktop.console$",
+                            "^org.virtualbox.app.VirtualBoxVM$",
+                            "^com.vmware.proxyApp.",
+                            "^com.parallels.winapp."
+                        ]
                         }
                     ]
                 },
                 {
+                    "description": "Single F4 -> Open Excel (delayed, canceled by double-press)",
                     "type": "basic",
-                    "from": {"key_code": "f4"},
+                    "from": { "key_code": "f4" },
                     "to": [
-                        {
-                            "set_variable": {
-                                "name": "f4 pressed",
-                                "value": 1
-                            }
-                        },
-                        {
-                            "key_code": "f4"
-                        }
-                    ],
-                    "conditions": [
-                        {
-                            "type": "variable_if",
-                            "name": "f4 pressed",
-                            "value": 0
-                        },
-                        {
-                            "type": "frontmost_application_unless",
-                            "bundle_identifiers": [
-                                "^com.vmware.fusion$",
-                                "^com.vmware.horizon$",
-                                "^com.vmware.view$",
-                                "^com.parallels.desktop$",
-                                "^com.parallels.vm$",
-                                "^com.parallels.desktop.console$",
-                                "^org.virtualbox.app.VirtualBoxVM$",
-                                "^com.vmware.proxyApp.",
-                                "^com.parallels.winapp."
-                            ]
-                        }
+                        { "set_variable": { "name": "f4_pressed", "value": 1 } }
                     ],
                     "to_delayed_action": {
                         "to_if_invoked": [
-                            {
-                                "set_variable": {
-                                    "name": "f4 pressed",
-                                    "value": 0
-                                }
-                            }
+                        { "key_code": "3", "modifiers": ["command", "option","shift"] },
+                        { "set_variable": { "name": "f4_pressed", "value": 0 } }
                         ],
                         "to_if_canceled": [
-                            {
-                                "set_variable": {
-                                    "name": "f4 pressed",
-                                    "value": 0
-                                }
-                            }
+                        { "set_variable": { "name": "f4_pressed", "value": 0 } }
                         ]
-                    }
+                    },
+                    "parameters": {
+                        "basic.to_delayed_action_delay_milliseconds": 300
+                    },
+                    "conditions": [
+                        { "type": "variable_if", "name": "f4_pressed", "value": 0 },
+                        {
+                        "type": "frontmost_application_unless",
+                        "bundle_identifiers": [
+                            "^com.vmware.fusion$",
+                            "^com.vmware.horizon$",
+                            "^com.vmware.view$",
+                            "^com.parallels.desktop$",
+                            "^com.parallels.vm$",
+                            "^com.parallels.desktop.console$",
+                            "^org.virtualbox.app.VirtualBoxVM$",
+                            "^com.vmware.proxyApp.",
+                            "^com.parallels.winapp."
+                        ]
+                        }
+                    ]
                 },
                 {
                     "description": "Double F5_.zshrc_aliassettingfileOpen(FunctionKey)",
