--- a/src/json/window_control.json.erb
+++ b/src/json/window_control.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "WindowControlSummary6",
+    "title": "WindowControlSummary7",
     "rules": [
         {
-            "description": "WindowsControlSummary6-1",
+            "description": "WindowsControlSummary7",
             "manipulators": [
                 {
                     "description": "LeftControl + U_WindowLeftUp",
@@ -203,7 +203,7 @@
                     "description": "RightOption + D_~/Documents",
                     "type": "basic",
                     "from": <%= from("d", ["right_option"], ["caps_lock"]) %>,
-                    "to": <%= to([["7", ["right_option", "left_shift", "right_gui"]]]) %>
+                    "to": <%= to([["8", ["right_option", "right_gui"]]]) %>
                 },
                 {
                     "description": "LeftOption + W_~/Work",
