--- a/src/json/functionkey_summary.json.erb
+++ b/src/json/functionkey_summary.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "FunctionkeySummary555",
+    "title": "FunctionkeySummary4",
     "rules": [
         {
-            "description": "FunctionkeySummary555",
+            "description": "FunctionkeySummary4",
             "manipulators": [
                 {
                 "description": "Double F1 -> Cmd+Opt+shift+2",
@@ -414,12 +414,12 @@
                 ]
                 },
                 {
-                "description": "Double F8 -> Cmd+Opt+shift+6",
+                "description": "Double F8 -> Cmd+Opt+control+0",
                 "type": "basic",
                 "from": { "key_code": "f8" },
                 "to": [
                     { "set_variable": { "name": "f8_pressed", "value": 0 } },
-                    { "key_code": "6", "modifiers": ["command", "option", "shift"] }
+                    { "key_code": "0", "modifiers": ["command", "option", "control"] }
                 ],
                 "conditions": [
                     { "type": "variable_if", "name": "f8_pressed", "value": 1 },
